# spellbook

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.spellbook.crystallized2.md  AGENTS.spellbook.md  CHANGELOG.md  CLAUDE.md  CLAUDE.spellbook.md  CONTRIBUTING.md  GEMINI.md  GLOSSARY.md  LICENSE  MANIFEST.md  README.md  RELEASE-NOTES.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-NOTICES  bootstrap.ps1  bootstrap.sh  install.py  install.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements-docs.txt  uninstall.py
.claude-plugin/: bootstrap.md
.codex/: spellbook-bootstrap.crystallized2.md  spellbook-bootstrap.md  spellbook-codex
.gemini/: config.yaml  styleguide.md
.github/: dependabot.yml  pull_request_template.md
agents/: chariot-implementer.crystallized2.md  chariot-implementer.md  code-reviewer.crystallized2.md  code-reviewer.md  emperor-governor.crystallized2.md  emperor-governor.md  git-committer.md  git-pusher.md  hierophant-distiller.crystallized2.md  hierophant-distiller.md  implementer.md  jira-mutator.md  jira-reader.md  justice-resolver.md  lovers-integrator.md  pr-creator.md  pr-merger.md  queen-affective.crystallized2.md  queen-affective.md  test-runner.md  web-researcher.md
commands/: a2a.md  address-pr-feedback.md  advanced-code-review-context.crystallized2.md  advanced-code-review-context.md  advanced-code-review-plan.md  advanced-code-review-report.md  advanced-code-review-review.crystallized2.md  advanced-code-review-review.md  advanced-code-review-verify.crystallized2.md  advanced-code-review-verify.md  audit-green-mirage.crystallized2.md  audit-green-mirage.md  audit-mirage-analyze.md  audit-mirage-cross.md  audit-mirage-report.md  brainstorm.md  canvas.md  code-review-feedback.md  code-review-give.md  code-review-tarot.md  compact.md  create-issue.md  create-pr.md  crystallize-consolidate.md  crystallize-verify.md  crystallize.md  dead-code-analyze.md  dead-code-implement.md  dead-code-report.md  dead-code-setup.md  decompose-claims.md  dedupe-analyze.md  dedupe-apply.md  dedupe-report.md  dedupe-setup.md  deep-research-interview.md  deep-research-investigate.md  deep-research-plan.crystallized2.md  deep-research-plan.md  design-assessment.crystallized2.md  (+117 more)
config/: mcp-language-server-examples.json
daemon/: requirements-tts.in  requirements-tts.txt  requirements.in  requirements.txt
docs/: acknowledgments.md  autonomous-mode-protocol.md  distill-session-plan-fixes.md  index.md  security.md  user-interaction-patterns.md  windows-support-report.md
docs-src/: acknowledgments.md  index.md
hooks/: audit-log.ps1  audit-log.py  audit-log.sh  bash-gate.ps1  (+34 more)
spellbook_mcp/: README.md  __init__.py  __main__.py  ab_test.py  auth.py  command_utils.py  compaction_detector.py  config_tools.py  curator_tools.py  db.py  health.py  injection.py  memory_consolidation.py  memory_store.py  memory_tools.py  metrics.py  notify.py  path_utils.py  preferences.py  pyproject.toml  resume.py  server.py  skill_analyzer.py  skill_ops.py  soul_extractor.py  stint_tools.py  swarm_tools.py  telemetry_sync.py  terminal_utils.py  tts.py  update_tools.py  update_watcher.py  watcher.py
spellbook_mcp/admin/: __init__.py  app.py  auth.py  cli.py  db.py  events.py  notifications.py
spellbook_mcp/admin/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
spellbook_mcp/admin/frontend/src/: App.tsx  main.tsx
spellbook_mcp/admin/frontend/src/api/: client.ts  types.ts
spellbook_mcp/admin/frontend/src/components/dashboard/: ActivityFeed.tsx
spellbook_mcp/admin/frontend/src/components/fractal/: GraphCanvas.tsx  GraphControls.tsx  GraphDetailsSidebar.tsx  GraphList.tsx  NodeDetail.tsx
spellbook_mcp/admin/frontend/src/components/layout/: Header.tsx  Sidebar.tsx
spellbook_mcp/admin/frontend/src/components/sessions/: MessageBubble.test.tsx  MessageBubble.tsx
spellbook_mcp/admin/frontend/src/components/shared/: Badge.tsx  EmptyState.tsx  LoadingSpinner.tsx
spellbook_mcp/admin/frontend/src/contexts/: WebSocketContext.tsx
spellbook_mcp/admin/frontend/src/hooks/: useAnalytics.ts  useConfig.ts  useDashboard.ts  useEventStream.ts  useFocus.ts  useFractalGraph.ts  useSessions.test.ts  useSessions.ts  useWebSocket.ts
spellbook_mcp/admin/frontend/src/pages/: AnalyticsPage.tsx  ChatHistoryPage.test.tsx  Dashboard.tsx  EventMonitorPage.tsx  FractalExplorer.tsx  Login.tsx  MemoryBrowser.tsx  SessionDetailPage.test.tsx  SessionDetailPage.tsx  Sessions.tsx
spellbook_mcp/admin/routes/: analytics.py  auth.py  config.py  dashboard.py  events.py  focus.py  fractal.py  health.py  memory.py  schemas.py  security.py  sessions.py  ws.py
spellbook_mcp/admin/static/: .build-hash  index.html
spellbook_mcp/admin/static/assets/: index-0TJGuPML.js  index-2XW8viKs.js  index-5jvNDpip.css  index-BhGN-Vpn.css  index-BwAAF4sq.js  index-CH_E1hsN.css  index-CfmnvEw-.css  index-ChlP9fmi.css  index-Cl_1qQnz.js  index-ClqjW2_k.css  index-CtWtXb8_.js  index-DCXIUmK-.css  index-DUW1m7sO.js  index-DfZHe_tz.css  index-Dl5jb7tv.js  index-DofiiVrL.js  index-DsMV20eq.css  index-DzGVJkRH.css  index-IVeCUuAL.css  index-Ou8J75GD.js  index-P7cFkIYy.js  index-wvcch8s8.js
spellbook_mcp/code_review/: __init__.py  arg_parser.py  deduplication.py  edge_cases.py  models.py  router.py
spellbook_mcp/coordination/: WORKER_CONTRACT.md  protocol.py  server.py  state.py  worker.py
spellbook_mcp/extractors/: files.py  persona.py  position.py  skill_phase.py  todos.py  workflow.py
spellbook_mcp/forged/: __init__.py  context_filtering.py  fractal_feedback.py  iteration_tools.py  project_tools.py  roundtable.py  schema.py  skill_selection.py  validators.py  verdict_parsing.py
spellbook_mcp/fractal/: graph_ops.py  models.py  node_ops.py  query_ops.py  schema.py
spellbook_mcp/pr_distill/: __init__.py  bless.py  config.py  errors.py  fetch.py  matcher.py
spellbook_mcp/security/: __init__.py  check.py  rules.py  scanner.py  tools.py
spellbook_mcp/session/: __init__.py  spawner.py
(+2362 files in other folders)
