[project]
name = "spellbook"
dynamic = ["version"]
description = "Skills, commands, and MCP tools for AI coding assistants"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.9.0,<4",
    "fastapi>=0.100.0",
    "websockets>=12.0",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "aiosqlite>=0.20.0,<0.23",
    "alembic>=1.13.0,<1.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.25.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mike>=2.0.0",
]
tts = [
    "kokoro>=0.9.0",
    "soundfile>=0.12.0",
    "sounddevice>=0.4.6",
]

[project.scripts]
spellbook = "spellbook.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = ".version"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["spellbook", "spellbook_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
addopts = "-m 'not docker and not integration and not slow and not external'"
markers = [
    "integration: marks tests as integration tests (skipped locally, runs in CI)",
    "docker: marks tests that require Docker or heavy platform fixtures (CI only)",
    "slow: marks tests with deliberate sleeps > 0.5s (skipped locally, runs in CI)",
    "external: marks tests requiring external tools like Claude CLI (skipped locally)",
]
