[project]
name = "spellbook"
dynamic = ["version"]
description = "Skills, commands, and MCP tools for AI coding assistants"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "aiosqlite>=0.20.0,<0.23",
    "alembic>=1.13.0,<1.19",
    "rich>=13.0",
    "claude-agent-sdk",
]

[project.optional-dependencies]
claude = ["claude-agent-sdk"]
gemini = []

[dependency-groups]
daemon = [
    "fastmcp>=0.4.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.25.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.25.0",
    "bigfoot[http]>=0.19.1",
    "python-tripwire[http]>=0.20.1",
    "dirty-equals>=0.8.0",
    "fastmcp>=0.4.1",
    "fastapi>=0.115.0",
    "pyyaml>=6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mike>=2.0.0",
]
[project.scripts]
spellbook = "spellbook.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = ".version"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["spellbook", "spellbook_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
addopts = "-m 'not docker and not integration and not slow and not external'"
markers = [
    "integration: marks tests as integration tests (skipped locally, runs in CI)",
    "docker: marks tests that require Docker or heavy platform fixtures (CI only)",
    "slow: marks tests with deliberate sleeps > 0.5s (skipped locally, runs in CI)",
    "external: marks tests requiring external tools like Claude CLI (skipped locally)",
    # QMD and Serena are external CLI tools (200MB+ npm global install) that
    # we intentionally do NOT add to the dev/test extras — they are too heavy
    # to require on every contributor machine and are not available in CI
    # images. Tests touching the file-based memory hybrid search path mark
    # themselves with `requires_memory_tools`, and conftest emits a session
    # warning when they get skipped. See AGENTS.spellbook.md ("Test dependency
    # exceptions") for install instructions and the rationale for the
    # exception.
    "requires_memory_tools: test requires QMD and Serena to be installed",
]

[tool.tripwire]
guard = "error"
# SocketPlugin intercepts socket.socket.close on the active verifier. The
# asyncio.run-driven loop teardown inside sync task entry points closes
# its self-pipe socket after the sandbox's active verifier is set, which
# makes tripwire blow up with UnmockedInteractionError on loop shutdown.
# No test in this repo uses tripwire.socket_mock; disabling the plugin
# globally lets HttpPlugin-only tests drive asyncio.run() safely.
disabled_plugins = ["socket"]

[tool.tripwire.firewall]
allow = ["socket:*", "database:*", "db:*", "subprocess:*", "http:*", "dns:*"]
